# Postly

./: .env  .flake8  .gitignore  README.md  pyproject.toml
djangogramm/: manage.py
djangogramm/core/: asgi.py  urls.py  wsgi.py
djangogramm/core/settings/: base.py  dev.py  prod.py
djangogramm/djangogramm/: asgi.py  settings.py  urls.py  wsgi.py
djangogramm/djangogramm/settings/: base.py  dev.py  prod.py
djangogramm/fixtures/: dumpdata.json  posts.json  users.json
djangogramm/main/: admin.py  urls.py  views.py
djangogramm/main/tests/: test_main_page.py
djangogramm/my_auth/: forms.py  urls.py  views.py
djangogramm/my_auth/bl/: email_generator.py
djangogramm/my_auth/tests/: test_auth.py
djangogramm/post/: admin.py  selectors.py  urls.py  utils.py  views.py
djangogramm/post/forms/: comment.py  post.py
djangogramm/post/migrations/: 0001_initial.py  0003_remove_like_value_alter_like_id_alter_like_owner_and_more.py  0004_alter_tag_id.py  0005_alter_comment_id_alter_image_id_alter_post_id.py
djangogramm/templates/: base.html
djangogramm/userprofile/: admin.py  forms.py  models.py  selectors.py  urls.py  views.py
djangogramm/users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
mysite/djangogramm/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
mysite/mysite/: settings.py  urls.py
postly/core/: asgi.py  urls.py  wsgi.py
postly/fixtures/: dumpdata.json
postly/post/: admin.py  urls.py  utils.py
postly/userprofile/: forms.py  views.py
postly/users/: models.py
requirements/: dev.txt  prod.txt
(+138 files in other folders)
