[tool.poetry]
name = "DjangoGramm"
version = "0.1.0"
description = ""
authors = ["Maks <gmb333x2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"
flake8 = "^6.1.0"
isort = "^5.13.2"
pytest-django = "^4.7.0"
pytest = "^7.4.4"
django-debug-toolbar = "^4.2.0"
boto3 = "^1.34.17"
django-storages = "^1.14.2"
psycopg2-binary = "^2.9.9"
django-allauth = "^0.60.0"
django-stubs = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
